--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.9",
   "private": true,
   "engines": {
-    "node": "0.12.0",
+    "node": "10",
     "npm": "2.5.1"
   },
   "scripts": {
@@ -47,5 +47,7 @@
     }
   ],
   "license": "LGPL-3.0",
-  "devDependencies": {}
+  "devDependencies": {
+    "grunt-contrib-watch": "^1.1.0"
+  }
 }
